--- a/locale/it.po
+++ b/locale/it.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
-"POT-Creation-Date: 2008-12-05 17:12+CET\n"
+"POT-Creation-Date: 2008-12-05 18:12+CET\n"
 "PO-Revision-Date: 2004-11-26 14:39+0100\n"
 "Last-Translator: Paolo Dina <paolo@php3.it>\n"
 "Language-Team: Italian <paolo@php3.it>\n"
@@ -85,13 +85,13 @@ msgstr "Titolo"
 
 #: ../ui/aruni/template.xhtml.en:53
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${body}"
 msgstr "Commenti:"
 
 #: ../ui/ical/daily_view.xml.en:25
 #, fuzzy
-msgctxt "link to"
+msgctxt "link"
 msgid "${calendar/name}"
 msgstr "Oggetti rinominati."
 
@@ -109,13 +109,13 @@ msgstr "Titolo"
 
 #: ../ui/folder/browse_image.xml.en:28
 #, fuzzy
-msgctxt "link to"
+msgctxt "link"
 msgid "${column/title}"
 msgstr "Titolo"
 
 #: ../ui/generic/browse_table.xml.en:39
 #, fuzzy
-msgctxt "link to"
+msgctxt "link"
 msgid "${column/value}"
 msgstr "Titolo"
 
@@ -127,19 +127,19 @@ msgstr "Contenuti"
 
 #: ../tracker/ui/edit_issue.xml.en:152
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${comment/datetime}"
 msgstr "Elenco metadati"
 
 #: ../tracker/ui/edit_issue.xml.en:163
 #, fuzzy
-msgctxt "link to"
+msgctxt "link"
 msgid "${comment/file}"
 msgstr "Contenuti"
 
 #: ../tracker/ui/edit_issue.xml.en:151
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${comment/user}"
 msgstr "Contenuti"
 
@@ -187,7 +187,7 @@ msgstr "Descrizione"
 
 #: ../ui/user/tasks.xml.en:17
 #, fuzzy
-msgctxt "link to"
+msgctxt "link"
 msgid "${doc/title}"
 msgstr "Titolo"
 
@@ -211,14 +211,15 @@ msgstr "Titolo"
 
 #: ../ui/ical/weekly_view.xml.en:36
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "${header/header}"
 msgstr "Transizione effettuata."
 
 #: ../wiki/ui/help.xml.en:8
-msgctxt "td"
+#, fuzzy
+msgctxt "table cell"
 msgid "${help_html}"
-msgstr ""
+msgstr "Nuova risorsa"
 
 #: ../wiki/ui/help.xml.en:11
 #, fuzzy
@@ -247,13 +248,13 @@ msgstr "Titolo"
 
 #: ../ui/folder/rename.xml.en:12
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${item/path}"
 msgstr "Titolo"
 
 #: ../ui/html/addlink.xml.en:76
 #, fuzzy
-msgctxt "link to"
+msgctxt "link"
 msgid "${item/short_title}"
 msgstr "Titolo"
 
@@ -272,7 +273,7 @@ msgstr "Titolo"
 
 #: ../ui/generic/menu.xml.en:12
 #, fuzzy
-msgctxt "link to"
+msgctxt "link"
 msgid "${item/title}"
 msgstr "Titolo"
 
@@ -305,7 +306,7 @@ msgstr "Titolo"
 
 #: ../ui/website/edit_languages.xml.en:28
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${language/code}"
 msgstr "Linguaggio"
 
@@ -318,7 +319,7 @@ msgstr "Linguaggio"
 
 #: ../ui/website/edit_languages.xml.en:27
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${language/name}"
 msgstr "Linguaggio"
 
@@ -341,7 +342,7 @@ msgstr "Azione"
 
 #: ../ui/aruni/template.xhtml.en:56
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${menu}"
 msgstr "Oggetti rinominati."
 
@@ -429,19 +430,19 @@ msgstr ""
 
 #: ../ui/file/history.xml.en:19
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${revision/date}"
 msgstr "Transizione effettuata."
 
 #: ../ui/file/history.xml.en:20
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${revision/size}"
 msgstr "traduzione"
 
 #: ../ui/file/history.xml.en:18
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${revision/username}"
 msgstr "Oggetti rinominati."
 
@@ -463,55 +464,55 @@ msgstr ""
 
 #: ../tracker/ui/issue_history.xml.en:36
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/assigned_to}"
 msgstr "traduzione"
 
 #: ../tracker/ui/issue_history.xml.en:39
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/cc_list}"
 msgstr "traduzione"
 
 #: ../tracker/ui/issue_history.xml.en:46
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/comment}"
 msgstr "Contenuti"
 
 #: ../tracker/ui/issue_history.xml.en:12
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/datetime}"
 msgstr "Transizione effettuata."
 
 #: ../tracker/ui/issue_history.xml.en:42
 #, fuzzy
-msgctxt "link to"
+msgctxt "link"
 msgid "${row/file}"
 msgstr "traduzione"
 
 #: ../tracker/ui/issue_history.xml.en:30
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/module}"
 msgstr "traduzione"
 
 #: ../tracker/ui/issue_history.xml.en:33
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/priority}"
 msgstr "traduzione"
 
 #: ../ui/ical/weekly_view.xml.en:42
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "${row/start}-${row/end}"
 msgstr "traduzione"
 
 #: ../tracker/ui/issue_history.xml.en:27
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/state}"
 msgstr "traduzione"
 
@@ -523,25 +524,25 @@ msgstr "Titolo"
 
 #: ../tracker/ui/issue_history.xml.en:18
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/title}"
 msgstr "Titolo"
 
 #: ../tracker/ui/issue_history.xml.en:24
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/type}"
 msgstr "traduzione"
 
 #: ../tracker/ui/issue_history.xml.en:13
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/user}"
 msgstr "traduzione"
 
 #: ../tracker/ui/issue_history.xml.en:21
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/version}"
 msgstr "traduzione"
 
@@ -637,13 +638,13 @@ msgstr "Titolo"
 
 #: ../ui/WorkflowAware_state.xml.en:54
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${transition/comments}"
 msgstr "Transizione effettuata."
 
 #: ../ui/WorkflowAware_state.xml.en:51
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${transition/date}"
 msgstr "Transizione effettuata."
 
@@ -655,13 +656,13 @@ msgstr "Transizione effettuata."
 
 #: ../ui/WorkflowAware_state.xml.en:52
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${transition/title}"
 msgstr "Transizione effettuata."
 
 #: ../ui/WorkflowAware_state.xml.en:53
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "${transition/user}"
 msgstr "traduzione"
 
@@ -695,7 +696,7 @@ msgid "${website/title}"
 msgstr "Titolo"
 
 #: ../ui/ical/monthly_view.xml.en:42
-msgctxt "td"
+msgctxt "table cell"
 msgid "${week/month}"
 msgstr ""
 
@@ -725,17 +726,17 @@ msgid "%s %s"
 msgstr ""
 
 #: ../ui/PO_edit.xml.en:17
-msgctxt "link to"
+msgctxt "link"
 msgid "&lt;"
 msgstr ""
 
 #: ../ui/website/broken_links.xml.en:11
-msgctxt "link to"
+msgctxt "link"
 msgid "(${item/n}) <g id='2'>${item/path}</g>"
 msgstr ""
 
 #: ../tracker/ui/edit_resource.xml.en:28 ../tracker/ui/edit_resource.xml.en:45
-msgctxt "td"
+msgctxt "table cell"
 msgid "(HH:MM)"
 msgstr ""
 
@@ -750,7 +751,7 @@ msgid "(To add an event lasting all day long, leave time fields empty.)"
 msgstr ""
 
 #: ../ui/ical/daily_view.xml.en:28
-msgctxt "link to"
+msgctxt "link"
 msgid "+"
 msgstr ""
 
@@ -782,7 +783,7 @@ msgid ":"
 msgstr ""
 
 #: ../ui/ical/monthly_template.xml.en:10
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='1'> ${event/SUMMARY}</g>  <g id='2'>${event/TIME}</g>"
 msgstr ""
 
@@ -808,33 +809,33 @@ msgid ""
 msgstr ""
 
 #: ../ui/text/externaledit.xml.en:17 ../ui/file/externaledit.xml.en:17
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='1'>Download External Editor for Windows</g>."
 msgstr ""
 
 #: ../tracker/ui/weekly_template.xml.en:9
-msgctxt "link to"
+msgctxt "link"
 msgid ""
 "<g id='1'>[#${cell/content/issue/number}]</g> ${cell/content/issue/title} "
 "(${cell/content/resource/title})"
 msgstr ""
 
 #: ../tracker/ui/weekly_template_fd.xml.en:8
-msgctxt "link to"
+msgctxt "link"
 msgid ""
 "<g id='1'>[#${event/issue/number}]</g> ${event/issue/title} (${event/"
 "resource/title})"
 msgstr ""
 
 #: ../tracker/ui/monthly_template.xml.en:10
-msgctxt "link to"
+msgctxt "link"
 msgid ""
 "<g id='1'>[#${event/issue/number}]</g> ${event/issue/title} <g id='2'>"
 "${event/TIME}</g> (${event/resource/title})"
 msgstr ""
 
 #: ../ui/aruni/template.xhtml.en:38
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='10'>Search</g>  <g id='11'>Contact</g>"
 msgstr ""
 
@@ -849,48 +850,48 @@ msgid "<g id='13'>${item/short_title}</g><x id='14'/>  <g id='15'> Select </g>"
 msgstr ""
 
 #: ../ui/aruni/template.xhtml.en:64
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='14'>About</g>  <g id='15'>Credits</g>  <g id='16'>License</g>"
 msgstr ""
 
 #: ../ui/generic/browse_table.xml.en:20
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>${column/title}</g>  <g id='3'> ${column/title}</g>"
 msgstr ""
 
 #: ../ui/website/search_table.xml.en:10
-msgctxt "link to"
+msgctxt "link"
 msgid ""
 "<g id='2'>${item/title}</g>  <x id='3'/>  <g id='4'>${item/abspath}</g> - <g "
 "id='5'>${item/type}</g> - <g id='6'>${item/size}</g>"
 msgstr ""
 
 #: ../ui/aruni/languages.xml.en:9
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>${lang/value}</g>  <g id='3'>|</g>"
 msgstr ""
 
 #: ../forum/ui/Forum_view.xml.en:10
-msgctxt "link to"
+msgctxt "link"
 msgid ""
 "<g id='2'>${thread/title}</g>  <x id='3'/> Posted by <g id='4'>${thread/"
 "author}</g>, the <g id='5'>${thread/date}</g>."
 msgstr ""
 
 #: ../ui/html/addlink.xml.en:41
-msgctxt "link to"
+msgctxt "link"
 msgid ""
 "<g id='2'>Browse</g>  <g id='3'>External Link</g>  <g id='4'>Insert</g>  <g "
 "id='5'>Upload</g>"
 msgstr ""
 
 #: ../ui/html/addimage.xml.en:31
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>Browse</g>  <g id='3'>Upload</g>"
 msgstr ""
 
 #: ../ui/text/externaledit.xml.en:20 ../ui/file/externaledit.xml.en:20
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>Download External Editor for Unix and MacOSX</g>."
 msgstr ""
 
@@ -902,27 +903,27 @@ msgid ""
 msgstr ""
 
 #: ../ui/ical/weekly_view.xml.en:13 ../ui/ical/monthly_view.xml.en:13
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>«</g> ${current_week} <g id='3'>»</g>"
 msgstr ""
 
 #: ../ui/aruni/location.xml.en:11
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='3'>${item/short_name}</g><g id='4'>/</g>"
 msgstr ""
 
 #: ../ui/user/profile.xml.en:17 ../ui/generic/icons_view.xml.en:16
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='3'>${item/title}</g>  <x id='4'/> ${item/description}"
 msgstr ""
 
 #: ../future/ui/order_addlink.xml.en:61
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='4'>${x/short_title}</g> /"
 msgstr ""
 
 #: ../ui/ical/weekly_view.xml.en:18 ../ui/ical/monthly_view.xml.en:18
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='4'>«</g> ${current_month} <g id='5'>»</g>"
 msgstr ""
 
@@ -935,7 +936,7 @@ msgid ""
 msgstr ""
 
 #: ../ui/PO_edit.xml.en:18
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='5'>></g>  <g id='6'>>></g>"
 msgstr ""
 
@@ -947,22 +948,22 @@ msgid ""
 msgstr ""
 
 #: ../ui/html/addimage.xml.en:45
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='6'>${x/short_title}</g> /"
 msgstr ""
 
 #: ../ui/aruni/template.xhtml.en:30
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='6'>Log in</g>  <g id='7'>Register</g>"
 msgstr ""
 
 #: ../ui/ical/weekly_view.xml.en:23 ../ui/ical/monthly_view.xml.en:23
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='6'>«</g> ${current_year} <g id='7'>»</g>"
 msgstr ""
 
 #: ../ui/ical/daily_view.xml.en:34
-msgctxt "link to"
+msgctxt "link"
 msgid ""
 "<g id='7'>${col/SUMMARY}</g>  <g id='8'>${col/DTSTART}</g>  <g id='9'>${col/"
 "DTEND}</g>"
@@ -974,12 +975,12 @@ msgid "<g id='7'>${item/short_title}</g><x id='8'/>  <g id='9'>Select</g>"
 msgstr ""
 
 #: ../ui/html/addlink.xml.en:58
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='8'>${x/short_title}</g> /"
 msgstr ""
 
 #: ../ui/aruni/template.xhtml.en:35
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='8'>My Profile</g>  <g id='9'>Log out</g>"
 msgstr ""
 
@@ -1052,7 +1053,7 @@ msgstr "Metadati modificati"
 
 #: ../ui/WorkflowAware_state.xml.en:44
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "Action"
 msgstr "Azione"
 
@@ -1250,9 +1251,10 @@ msgid "Attachement:"
 msgstr ""
 
 #: ../tracker/ui/edit_issue.xml.en:163
-msgctxt "td"
+#, fuzzy
+msgctxt "table cell"
 msgid "Attachement:"
-msgstr ""
+msgstr "Commenti:"
 
 #: ../calendar_views.py:50
 msgid "August"
@@ -1301,7 +1303,7 @@ msgstr "Contenuti"
 
 #: ../ui/html/addlink.xml.en:65
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "Browse Content"
 msgstr "Contenuti"
 
@@ -1328,7 +1330,7 @@ msgstr ""
 
 #: ../ui/WorkflowAware_state.xml.en:45
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "By"
 msgstr "Corpo"
 
@@ -1483,12 +1485,12 @@ msgstr "Codice"
 
 #: ../ui/website/edit_languages.xml.en:16
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "Code"
 msgstr "Codice"
 
 #: ../ui/ical/weekly_view.xml.en:10 ../ui/ical/monthly_view.xml.en:10
-msgctxt "link to"
+msgctxt "link"
 msgid "Come back to today"
 msgstr ""
 
@@ -1502,7 +1504,7 @@ msgid "Comment"
 msgstr "Commenti:"
 
 #: ../tracker/ui/edit_issue.xml.en:150
-msgctxt "td"
+msgctxt "table cell"
 msgid "Comment <g id='35'>${comment/number}</g>"
 msgstr ""
 
@@ -1520,7 +1522,7 @@ msgstr "Commenti:"
 
 #: ../ui/WorkflowAware_state.xml.en:46
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "Comments"
 msgstr "Commenti:"
 
@@ -1626,7 +1628,7 @@ msgstr "File aggiornato."
 
 #: ../ui/WorkflowAware_state.xml.en:43 ../ui/file/history.xml.en:12
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "Date"
 msgstr "Data"
 
@@ -1647,7 +1649,7 @@ msgstr "Default"
 
 #: ../ui/website/edit_languages.xml.en:17
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "Default"
 msgstr "Default"
 
@@ -1670,7 +1672,7 @@ msgstr "Descrizione"
 
 #: ../ui/ical/edit_event.xml.en:55
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "Description"
 msgstr "Descrizione"
 
@@ -1722,7 +1724,7 @@ msgstr "Modifica"
 
 #: ../forum/ui/Thread_view.xml.en:19
 #, fuzzy
-msgctxt "link to"
+msgctxt "link"
 msgid "Edit"
 msgstr "Modifica"
 
@@ -1861,7 +1863,7 @@ msgid "End"
 msgstr ""
 
 #: ../ui/ical/edit_event.xml.en:44
-msgctxt "td"
+msgctxt "table cell"
 msgid "End"
 msgstr ""
 
@@ -2004,7 +2006,7 @@ msgstr "Modifica l'impostazione predefinita"
 
 #: ../wiki/ui/edit.xml.en:97
 #, fuzzy
-msgctxt "link to"
+msgctxt "link"
 msgid "Format"
 msgstr "Formato"
 
@@ -2041,7 +2043,7 @@ msgstr ""
 
 #: ../ui/ical/edit_timetables.xml.en:20 ../ui/ical/edit_timetables.xml.en:31
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "From"
 msgstr "Da"
 
@@ -2050,7 +2052,7 @@ msgid "Front Page"
 msgstr ""
 
 #: ../ui/ical/weekly_view.xml.en:62
-msgctxt "th"
+msgctxt "table cell"
 msgid "Full day"
 msgstr ""
 
@@ -2190,7 +2192,7 @@ msgstr "Ungherese"
 
 #: ../ui/base/login.xml.en:18
 #, fuzzy
-msgctxt "link to"
+msgctxt "link"
 msgid "I forgot my password"
 msgstr "Modifica l'impostazione predefinita"
 
@@ -2369,7 +2371,7 @@ msgstr "Licenza"
 
 #: ../ui/ical/edit_event.xml.en:27
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "Location"
 msgstr "Azione"
 
@@ -2447,7 +2449,7 @@ msgid "Message"
 msgstr "Messaggio"
 
 #: ../ui/PO_edit.xml.en:12
-msgctxt "th"
+msgctxt "table cell"
 msgid ""
 "Message ${messages_index} / ${messages_total} <x id='2'/>  <g id='3'>&lt;&lt;"
 "</g>"
@@ -2552,7 +2554,7 @@ msgstr "Nome"
 
 #: ../ui/website/edit_languages.xml.en:15
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "Name"
 msgstr "Nome"
 
@@ -3189,7 +3191,7 @@ msgstr "Nuova risorsa"
 
 #: ../ui/ical/edit_event.xml.en:12
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "Resource"
 msgstr "Nuova risorsa"
 
@@ -3397,7 +3399,7 @@ msgstr ""
 
 #: ../ui/html/addlink.xml.en:66 ../future/ui/order_addlink.xml.en:69
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "Select Resource"
 msgstr "Nuova risorsa"
 
@@ -3432,7 +3434,7 @@ msgid "Size"
 msgstr "Dimensione"
 
 #: ../ui/file/history.xml.en:13
-msgctxt "th"
+msgctxt "table cell"
 msgid "Size (bytes)"
 msgstr ""
 
@@ -3466,7 +3468,7 @@ msgstr ""
 
 #: ../ui/ical/edit_event.xml.en:33
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "Start"
 msgstr "Stato"
 
@@ -3503,7 +3505,7 @@ msgstr "Stato"
 
 #: ../ui/ical/edit_event.xml.en:63
 #, fuzzy
-msgctxt "td"
+msgctxt "table cell"
 msgid "Status"
 msgstr "Stato"
 
@@ -3534,7 +3536,7 @@ msgid "Stored Searches"
 msgstr ""
 
 #: ../ui/ical/edit_event.xml.en:21
-msgctxt "td"
+msgctxt "table cell"
 msgid "Summary"
 msgstr ""
 
@@ -3882,7 +3884,7 @@ msgstr "Transizione effettuata."
 
 #: ../ui/PO_edit.xml.en:28
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "Translation"
 msgstr "Traduzione memorizzata."
 
@@ -4029,7 +4031,7 @@ msgstr "Utente"
 
 #: ../ui/file/history.xml.en:11
 #, fuzzy
-msgctxt "th"
+msgctxt "table cell"
 msgid "User"
 msgstr "Utente"
 
@@ -4202,7 +4204,7 @@ msgid "Yes"
 msgstr ""
 
 #: ../ui/website/edit_languages.xml.en:30
-msgctxt "td"
+msgctxt "table cell"
 msgid "Yes"
 msgstr ""
 
@@ -4313,7 +4315,7 @@ msgid "Zoom Out"
 msgstr ""
 
 #: ../tracker/ui/edit_issue.xml.en:154
-msgctxt "td"
+msgctxt "table cell"
 msgid "[ <g id='36'> Reply </g>]"
 msgstr ""
 
@@ -4327,7 +4329,7 @@ msgid "[%s]"
 msgstr ""
 
 #: ../tracker/ui/search.xml.en:45
-msgctxt "td"
+msgctxt "table cell"
 msgid "days ago"
 msgstr ""
 
@@ -4387,7 +4389,7 @@ msgid "the Rich Text Editor is unavailable.)"
 msgstr ""
 
 #: ../ui/ical/edit_timetables.xml.en:24 ../ui/ical/edit_timetables.xml.en:35
-msgctxt "td"
+msgctxt "table cell"
 msgid "to"
 msgstr ""
 
@@ -4407,9 +4409,10 @@ msgid ""
 msgstr ""
 
 #: ../ui/folder/rename.xml.en:15
-msgctxt "td"
+#, fuzzy
+msgctxt "table cell"
 msgid "⇒ ${item/parent_path}"
-msgstr ""
+msgstr "Titolo"
 
 #~ msgid "\n"
 #~ msgstr "\n"
@@ -4466,6 +4469,11 @@ msgstr ""
 #~ msgstr "traduzione"
 
 #, fuzzy
+#~ msgctxt "link to"
+#~ msgid "${column/title}"
+#~ msgstr "Titolo"
+
+#, fuzzy
 #~ msgid "${contact/title}"
 #~ msgstr "Elenco metadati"
 
@@ -4488,6 +4496,16 @@ msgstr ""
 #, fuzzy
 #~ msgid "${issue/title}"
 #~ msgstr "Titolo"
+
+#, fuzzy
+#~ msgctxt "link to"
+#~ msgid "${item/title}"
+#~ msgstr "Titolo"
+
+#, fuzzy
+#~ msgctxt "td"
+#~ msgid "${language/name}"
+#~ msgstr "Linguaggio"
 
 #, fuzzy
 #~ msgid "${menu/content}"
@@ -5056,6 +5074,11 @@ msgstr ""
 #~ msgid "Browse"
 #~ msgstr "Naviga"
 
+#, fuzzy
+#~ msgctxt "th"
+#~ msgid "Browse Content"
+#~ msgstr "Contenuti"
+
 #~ msgid "Browse-Directories"
 #~ msgstr "Naviga tra le cartelle"
 
@@ -5225,6 +5248,11 @@ msgstr ""
 #~ msgstr "Data <stl:inline content=\"table/sortcontrol(mtime)\"></stl:inline>"
 
 #, fuzzy
+#~ msgctxt "th"
+#~ msgid "Default"
+#~ msgstr "Default"
+
+#, fuzzy
 #~ msgid "Definitions."
 #~ msgstr "Descrizione"
 
@@ -5235,6 +5263,11 @@ msgstr ""
 #, fuzzy
 #~ msgid "Demo"
 #~ msgstr "Rimuovi"
+
+#, fuzzy
+#~ msgctxt "td"
+#~ msgid "Description"
+#~ msgstr "Descrizione"
 
 #~ msgid ""
 #~ "Description (<stl:inline content=\"description/lang_name\"></stl:inline>)"
@@ -5325,6 +5358,11 @@ msgstr ""
 
 #~ msgid "Each version is given a distinguishing version number."
 #~ msgstr "Ad ogni versione è associato un numero di versione univoco."
+
+#, fuzzy
+#~ msgctxt "link to"
+#~ msgid "Edit"
+#~ msgstr "Modifica"
 
 #, fuzzy
 #~ msgctxt "input[value]"
@@ -5848,6 +5886,11 @@ msgstr ""
 #~ msgstr "NO WARRANTY"
 
 #, fuzzy
+#~ msgctxt "th"
+#~ msgid "Name"
+#~ msgstr "Nome"
+
+#, fuzzy
 #~ msgid "Name (optional)"
 #~ msgstr "Commenti:"
 
@@ -6123,6 +6166,11 @@ msgstr ""
 #~ msgctxt "input[value]"
 #~ msgid "Replace"
 #~ msgstr "Anteprima"
+
+#, fuzzy
+#~ msgctxt "td"
+#~ msgid "Resource"
+#~ msgstr "Nuova risorsa"
 
 #, fuzzy
 #~ msgid "Reviewers"
@@ -6599,6 +6647,11 @@ msgstr ""
 
 #~ msgid "Use CTRL or Maj if you want add more than one user."
 #~ msgstr "Usa CTRL o Maj se vuoi aggiungere più di un utente."
+
+#, fuzzy
+#~ msgctxt "th"
+#~ msgid "User"
+#~ msgstr "Utente"
 
 #~ msgid "User added"
 #~ msgstr "Utente aggiunto"
