--- a/locale/locale.pot
+++ b/locale/locale.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2008-12-05 17:12+CET\n"
+"POT-Creation-Date: 2008-12-05 18:12+CET\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2959,214 +2959,214 @@ msgid "Zhou Li (Chinese)"
 msgstr ""
 
 #: ../ui/ical/daily_view.xml.en:25
-msgctxt "link to"
+msgctxt "link"
 msgid "${calendar/name}"
 msgstr ""
 
 #: ../ui/folder/browse_image.xml.en:28
-msgctxt "link to"
+msgctxt "link"
 msgid "${column/title}"
 msgstr ""
 
 #: ../ui/generic/browse_table.xml.en:39
-msgctxt "link to"
+msgctxt "link"
 msgid "${column/value}"
 msgstr ""
 
 #: ../tracker/ui/edit_issue.xml.en:163
-msgctxt "link to"
+msgctxt "link"
 msgid "${comment/file}"
 msgstr ""
 
 #: ../ui/user/tasks.xml.en:17
-msgctxt "link to"
+msgctxt "link"
 msgid "${doc/title}"
 msgstr ""
 
 #: ../ui/html/addlink.xml.en:76
-msgctxt "link to"
+msgctxt "link"
 msgid "${item/short_title}"
 msgstr ""
 
 #: ../ui/generic/menu.xml.en:12
-msgctxt "link to"
+msgctxt "link"
 msgid "${item/title}"
 msgstr ""
 
 #: ../tracker/ui/issue_history.xml.en:42
-msgctxt "link to"
+msgctxt "link"
 msgid "${row/file}"
 msgstr ""
 
 #: ../ui/PO_edit.xml.en:17
-msgctxt "link to"
+msgctxt "link"
 msgid "&lt;"
 msgstr ""
 
 #: ../ui/website/broken_links.xml.en:11
-msgctxt "link to"
+msgctxt "link"
 msgid "(${item/n}) <g id='2'>${item/path}</g>"
 msgstr ""
 
 #: ../ui/ical/daily_view.xml.en:28
-msgctxt "link to"
+msgctxt "link"
 msgid "+"
 msgstr ""
 
 #: ../ui/ical/monthly_template.xml.en:10
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='1'> ${event/SUMMARY}</g>  <g id='2'>${event/TIME}</g>"
 msgstr ""
 
 #: ../ui/text/externaledit.xml.en:17
 #: ../ui/file/externaledit.xml.en:17
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='1'>Download External Editor for Windows</g>."
 msgstr ""
 
 #: ../tracker/ui/weekly_template.xml.en:9
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='1'>[#${cell/content/issue/number}]</g> ${cell/content/issue/title} (${cell/content/resource/title})"
 msgstr ""
 
 #: ../tracker/ui/weekly_template_fd.xml.en:8
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='1'>[#${event/issue/number}]</g> ${event/issue/title} (${event/resource/title})"
 msgstr ""
 
 #: ../tracker/ui/monthly_template.xml.en:10
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='1'>[#${event/issue/number}]</g> ${event/issue/title} <g id='2'>${event/TIME}</g> (${event/resource/title})"
 msgstr ""
 
 #: ../ui/aruni/template.xhtml.en:38
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='10'>Search</g>  <g id='11'>Contact</g>"
 msgstr ""
 
 #: ../ui/aruni/template.xhtml.en:64
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='14'>About</g>  <g id='15'>Credits</g>  <g id='16'>License</g>"
 msgstr ""
 
 #: ../ui/generic/browse_table.xml.en:20
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>${column/title}</g>  <g id='3'> ${column/title}</g>"
 msgstr ""
 
 #: ../ui/website/search_table.xml.en:10
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>${item/title}</g>  <x id='3'/>  <g id='4'>${item/abspath}</g> - <g id='5'>${item/type}</g> - <g id='6'>${item/size}</g>"
 msgstr ""
 
 #: ../ui/aruni/languages.xml.en:9
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>${lang/value}</g>  <g id='3'>|</g>"
 msgstr ""
 
 #: ../forum/ui/Forum_view.xml.en:10
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>${thread/title}</g>  <x id='3'/> Posted by <g id='4'>${thread/author}</g>, the <g id='5'>${thread/date}</g>."
 msgstr ""
 
 #: ../ui/html/addlink.xml.en:41
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>Browse</g>  <g id='3'>External Link</g>  <g id='4'>Insert</g>  <g id='5'>Upload</g>"
 msgstr ""
 
 #: ../ui/html/addimage.xml.en:31
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>Browse</g>  <g id='3'>Upload</g>"
 msgstr ""
 
 #: ../ui/text/externaledit.xml.en:20
 #: ../ui/file/externaledit.xml.en:20
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>Download External Editor for Unix and MacOSX</g>."
 msgstr ""
 
 #: ../ui/ical/weekly_view.xml.en:13
 #: ../ui/ical/monthly_view.xml.en:13
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='2'>«</g> ${current_week} <g id='3'>»</g>"
 msgstr ""
 
 #: ../ui/aruni/location.xml.en:11
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='3'>${item/short_name}</g><g id='4'>/</g>"
 msgstr ""
 
 #: ../ui/user/profile.xml.en:17
 #: ../ui/generic/icons_view.xml.en:16
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='3'>${item/title}</g>  <x id='4'/> ${item/description}"
 msgstr ""
 
 #: ../future/ui/order_addlink.xml.en:61
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='4'>${x/short_title}</g> /"
 msgstr ""
 
 #: ../ui/ical/weekly_view.xml.en:18
 #: ../ui/ical/monthly_view.xml.en:18
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='4'>«</g> ${current_month} <g id='5'>»</g>"
 msgstr ""
 
 #: ../ui/PO_edit.xml.en:18
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='5'>></g>  <g id='6'>>></g>"
 msgstr ""
 
 #: ../ui/html/addimage.xml.en:45
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='6'>${x/short_title}</g> /"
 msgstr ""
 
 #: ../ui/aruni/template.xhtml.en:30
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='6'>Log in</g>  <g id='7'>Register</g>"
 msgstr ""
 
 #: ../ui/ical/weekly_view.xml.en:23
 #: ../ui/ical/monthly_view.xml.en:23
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='6'>«</g> ${current_year} <g id='7'>»</g>"
 msgstr ""
 
 #: ../ui/ical/daily_view.xml.en:34
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='7'>${col/SUMMARY}</g>  <g id='8'>${col/DTSTART}</g>  <g id='9'>${col/DTEND}</g>"
 msgstr ""
 
 #: ../ui/html/addlink.xml.en:58
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='8'>${x/short_title}</g> /"
 msgstr ""
 
 #: ../ui/aruni/template.xhtml.en:35
-msgctxt "link to"
+msgctxt "link"
 msgid "<g id='8'>My Profile</g>  <g id='9'>Log out</g>"
 msgstr ""
 
 #: ../ui/ical/weekly_view.xml.en:10
 #: ../ui/ical/monthly_view.xml.en:10
-msgctxt "link to"
+msgctxt "link"
 msgid "Come back to today"
 msgstr ""
 
 #: ../forum/ui/Thread_view.xml.en:19
-msgctxt "link to"
+msgctxt "link"
 msgid "Edit"
 msgstr ""
 
 #: ../wiki/ui/edit.xml.en:97
-msgctxt "link to"
+msgctxt "link"
 msgid "Format"
 msgstr ""
 
 #: ../ui/base/login.xml.en:18
-msgctxt "link to"
+msgctxt "link"
 msgid "I forgot my password"
 msgstr ""
 
@@ -3660,227 +3660,309 @@ msgctxt "strong"
 msgid "Version:"
 msgstr ""
 
-#: ../ui/website/edit_languages.xml.en:11
-msgctxt "table[summary]"
-msgid "Language settings"
-msgstr ""
-
 #: ../ui/aruni/template.xhtml.en:53
-msgctxt "td"
+msgctxt "table cell"
 msgid "${body}"
 msgstr ""
 
 #: ../tracker/ui/edit_issue.xml.en:152
-msgctxt "td"
+msgctxt "table cell"
 msgid "${comment/datetime}"
 msgstr ""
 
 #: ../tracker/ui/edit_issue.xml.en:151
-msgctxt "td"
+msgctxt "table cell"
 msgid "${comment/user}"
 msgstr ""
 
+#: ../ui/ical/weekly_view.xml.en:36
+msgctxt "table cell"
+msgid "${header/header}"
+msgstr ""
+
 #: ../wiki/ui/help.xml.en:8
-msgctxt "td"
+msgctxt "table cell"
 msgid "${help_html}"
 msgstr ""
 
 #: ../ui/folder/rename.xml.en:12
-msgctxt "td"
+msgctxt "table cell"
 msgid "${item/path}"
 msgstr ""
 
 #: ../ui/website/edit_languages.xml.en:28
-msgctxt "td"
+msgctxt "table cell"
 msgid "${language/code}"
 msgstr ""
 
 #: ../ui/website/edit_languages.xml.en:27
-msgctxt "td"
+msgctxt "table cell"
 msgid "${language/name}"
 msgstr ""
 
 #: ../ui/aruni/template.xhtml.en:56
-msgctxt "td"
+msgctxt "table cell"
 msgid "${menu}"
 msgstr ""
 
 #: ../ui/file/history.xml.en:19
-msgctxt "td"
+msgctxt "table cell"
 msgid "${revision/date}"
 msgstr ""
 
 #: ../ui/file/history.xml.en:20
-msgctxt "td"
+msgctxt "table cell"
 msgid "${revision/size}"
 msgstr ""
 
 #: ../ui/file/history.xml.en:18
-msgctxt "td"
+msgctxt "table cell"
 msgid "${revision/username}"
 msgstr ""
 
 #: ../tracker/ui/issue_history.xml.en:36
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/assigned_to}"
 msgstr ""
 
 #: ../tracker/ui/issue_history.xml.en:39
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/cc_list}"
 msgstr ""
 
 #: ../tracker/ui/issue_history.xml.en:46
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/comment}"
 msgstr ""
 
 #: ../tracker/ui/issue_history.xml.en:12
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/datetime}"
 msgstr ""
 
 #: ../tracker/ui/issue_history.xml.en:30
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/module}"
 msgstr ""
 
 #: ../tracker/ui/issue_history.xml.en:33
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/priority}"
 msgstr ""
 
+#: ../ui/ical/weekly_view.xml.en:42
+msgctxt "table cell"
+msgid "${row/start}-${row/end}"
+msgstr ""
+
 #: ../tracker/ui/issue_history.xml.en:27
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/state}"
 msgstr ""
 
 #: ../tracker/ui/issue_history.xml.en:18
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/title}"
 msgstr ""
 
 #: ../tracker/ui/issue_history.xml.en:24
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/type}"
 msgstr ""
 
 #: ../tracker/ui/issue_history.xml.en:13
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/user}"
 msgstr ""
 
 #: ../tracker/ui/issue_history.xml.en:21
-msgctxt "td"
+msgctxt "table cell"
 msgid "${row/version}"
 msgstr ""
 
 #: ../ui/WorkflowAware_state.xml.en:54
-msgctxt "td"
+msgctxt "table cell"
 msgid "${transition/comments}"
 msgstr ""
 
 #: ../ui/WorkflowAware_state.xml.en:51
-msgctxt "td"
+msgctxt "table cell"
 msgid "${transition/date}"
 msgstr ""
 
 #: ../ui/WorkflowAware_state.xml.en:52
-msgctxt "td"
+msgctxt "table cell"
 msgid "${transition/title}"
 msgstr ""
 
 #: ../ui/WorkflowAware_state.xml.en:53
-msgctxt "td"
+msgctxt "table cell"
 msgid "${transition/user}"
 msgstr ""
 
 #: ../ui/ical/monthly_view.xml.en:42
-msgctxt "td"
+msgctxt "table cell"
 msgid "${week/month}"
 msgstr ""
 
 #: ../tracker/ui/edit_resource.xml.en:28
 #: ../tracker/ui/edit_resource.xml.en:45
-msgctxt "td"
+msgctxt "table cell"
 msgid "(HH:MM)"
 msgstr ""
 
+#: ../ui/WorkflowAware_state.xml.en:44
+msgctxt "table cell"
+msgid "Action"
+msgstr ""
+
 #: ../tracker/ui/edit_issue.xml.en:163
-msgctxt "td"
+msgctxt "table cell"
 msgid "Attachement:"
 msgstr ""
 
+#: ../ui/html/addlink.xml.en:65
+msgctxt "table cell"
+msgid "Browse Content"
+msgstr ""
+
+#: ../ui/WorkflowAware_state.xml.en:45
+msgctxt "table cell"
+msgid "By"
+msgstr ""
+
+#: ../ui/website/edit_languages.xml.en:16
+msgctxt "table cell"
+msgid "Code"
+msgstr ""
+
 #: ../tracker/ui/edit_issue.xml.en:150
-msgctxt "td"
+msgctxt "table cell"
 msgid "Comment <g id='35'>${comment/number}</g>"
 msgstr ""
 
+#: ../ui/WorkflowAware_state.xml.en:46
+msgctxt "table cell"
+msgid "Comments"
+msgstr ""
+
+#: ../ui/WorkflowAware_state.xml.en:43
+#: ../ui/file/history.xml.en:12
+msgctxt "table cell"
+msgid "Date"
+msgstr ""
+
+#: ../ui/website/edit_languages.xml.en:17
+msgctxt "table cell"
+msgid "Default"
+msgstr ""
+
 #: ../ui/ical/edit_event.xml.en:55
-msgctxt "td"
+msgctxt "table cell"
 msgid "Description"
 msgstr ""
 
 #: ../ui/ical/edit_event.xml.en:44
-msgctxt "td"
+msgctxt "table cell"
 msgid "End"
 msgstr ""
 
 #: ../ui/ical/edit_timetables.xml.en:20
 #: ../ui/ical/edit_timetables.xml.en:31
-msgctxt "td"
+msgctxt "table cell"
 msgid "From"
 msgstr ""
 
+#: ../ui/ical/weekly_view.xml.en:62
+msgctxt "table cell"
+msgid "Full day"
+msgstr ""
+
 #: ../ui/ical/edit_event.xml.en:27
-msgctxt "td"
+msgctxt "table cell"
 msgid "Location"
 msgstr ""
 
+#: ../ui/PO_edit.xml.en:12
+msgctxt "table cell"
+msgid "Message ${messages_index} / ${messages_total} <x id='2'/>  <g id='3'>&lt;&lt;</g>"
+msgstr ""
+
+#: ../ui/website/edit_languages.xml.en:15
+msgctxt "table cell"
+msgid "Name"
+msgstr ""
+
 #: ../ui/ical/edit_event.xml.en:12
-msgctxt "td"
+msgctxt "table cell"
 msgid "Resource"
 msgstr ""
 
+#: ../ui/html/addlink.xml.en:66
+#: ../future/ui/order_addlink.xml.en:69
+msgctxt "table cell"
+msgid "Select Resource"
+msgstr ""
+
+#: ../ui/file/history.xml.en:13
+msgctxt "table cell"
+msgid "Size (bytes)"
+msgstr ""
+
 #: ../ui/ical/edit_event.xml.en:33
-msgctxt "td"
+msgctxt "table cell"
 msgid "Start"
 msgstr ""
 
 #: ../ui/ical/edit_event.xml.en:63
-msgctxt "td"
+msgctxt "table cell"
 msgid "Status"
 msgstr ""
 
 #: ../ui/ical/edit_event.xml.en:21
-msgctxt "td"
+msgctxt "table cell"
 msgid "Summary"
 msgstr ""
 
+#: ../ui/PO_edit.xml.en:28
+msgctxt "table cell"
+msgid "Translation"
+msgstr ""
+
+#: ../ui/file/history.xml.en:11
+msgctxt "table cell"
+msgid "User"
+msgstr ""
+
 #: ../ui/website/edit_languages.xml.en:30
-msgctxt "td"
+msgctxt "table cell"
 msgid "Yes"
 msgstr ""
 
 #: ../tracker/ui/edit_issue.xml.en:154
-msgctxt "td"
+msgctxt "table cell"
 msgid "[ <g id='36'> Reply </g>]"
 msgstr ""
 
 #: ../tracker/ui/search.xml.en:45
-msgctxt "td"
+msgctxt "table cell"
 msgid "days ago"
 msgstr ""
 
 #: ../ui/ical/edit_timetables.xml.en:24
 #: ../ui/ical/edit_timetables.xml.en:35
-msgctxt "td"
+msgctxt "table cell"
 msgid "to"
 msgstr ""
 
 #: ../ui/folder/rename.xml.en:15
-msgctxt "td"
+msgctxt "table cell"
 msgid "⇒ ${item/parent_path}"
+msgstr ""
+
+#: ../ui/website/edit_languages.xml.en:11
+msgctxt "table[summary]"
+msgid "Language settings"
 msgstr ""
 
 #: ../ui/ical/edit_event.xml.en:57
@@ -3917,88 +3999,6 @@ msgstr ""
 #: ../ui/website/virtual_hosts.xml.en:12
 msgctxt "textarea"
 msgid "${vhosts}"
-msgstr ""
-
-#: ../ui/ical/weekly_view.xml.en:36
-msgctxt "th"
-msgid "${header/header}"
-msgstr ""
-
-#: ../ui/ical/weekly_view.xml.en:42
-msgctxt "th"
-msgid "${row/start}-${row/end}"
-msgstr ""
-
-#: ../ui/WorkflowAware_state.xml.en:44
-msgctxt "th"
-msgid "Action"
-msgstr ""
-
-#: ../ui/html/addlink.xml.en:65
-msgctxt "th"
-msgid "Browse Content"
-msgstr ""
-
-#: ../ui/WorkflowAware_state.xml.en:45
-msgctxt "th"
-msgid "By"
-msgstr ""
-
-#: ../ui/website/edit_languages.xml.en:16
-msgctxt "th"
-msgid "Code"
-msgstr ""
-
-#: ../ui/WorkflowAware_state.xml.en:46
-msgctxt "th"
-msgid "Comments"
-msgstr ""
-
-#: ../ui/WorkflowAware_state.xml.en:43
-#: ../ui/file/history.xml.en:12
-msgctxt "th"
-msgid "Date"
-msgstr ""
-
-#: ../ui/website/edit_languages.xml.en:17
-msgctxt "th"
-msgid "Default"
-msgstr ""
-
-#: ../ui/ical/weekly_view.xml.en:62
-msgctxt "th"
-msgid "Full day"
-msgstr ""
-
-#: ../ui/PO_edit.xml.en:12
-msgctxt "th"
-msgid "Message ${messages_index} / ${messages_total} <x id='2'/>  <g id='3'>&lt;&lt;</g>"
-msgstr ""
-
-#: ../ui/website/edit_languages.xml.en:15
-msgctxt "th"
-msgid "Name"
-msgstr ""
-
-#: ../ui/html/addlink.xml.en:66
-#: ../future/ui/order_addlink.xml.en:69
-msgctxt "th"
-msgid "Select Resource"
-msgstr ""
-
-#: ../ui/file/history.xml.en:13
-msgctxt "th"
-msgid "Size (bytes)"
-msgstr ""
-
-#: ../ui/PO_edit.xml.en:28
-msgctxt "th"
-msgid "Translation"
-msgstr ""
-
-#: ../ui/file/history.xml.en:11
-msgctxt "th"
-msgid "User"
 msgstr ""
 
 #: ../ui/aruni/template.xhtml.en:7
